# xopt

./: .gitattributes  .gitignore  CMakeList.txt  CMakeLists.txt  INSTALL  Makefile  README.md  TRproj.f90  anc.f90  ancopt.f90  conjgrad.f90  constrains.f90  control.f90  copt.f90  defaults.f90  dist.f90  distclean.cmake  eval_opt.f90  getHess.f90  getgrad.f90  hessup.f90  intbond.f90  io.f90  lambda.f90  main.f90  modules.f90  print.f90  progs.f90  setup.sh  string.f90
.github/workflows/: linux.yml  main.yml  osx.yml
cmake/: FindMKL.cmake  FindOpenBLAS.cmake
cmake/math/: MathLibs.cmake
configs/: Makefile.gnu.mkl  Makefile.intel.mkl  Makefile.openblas  Makefile.osx
docs/: Makefile  authors.rst  compile.rst  conf.py  constraints.rst  getsub.sh  index.rst  make.bat  manual.rst  parallel.rst  prog_interface.rst  requirements.txt  running.rst
docs/_build/doctrees/: authors.doctree  code_overview.doctree  compile.doctree  complile.doctree  constraints.doctree  environment.pickle  index.doctree  manual.doctree  parallel.doctree  prog_interface.doctree  running.doctree
docs/_build/html/: .buildinfo  authors.html  code_overview.html  compile.html  complile.html  constraints.html  genindex.html  index.html  manual.html  objects.inv  parallel.html  prog_interface.html  running.html  search.html  searchindex.js
docs/_build/html/_sources/: code_overview.rst.txt  complile.rst.txt  constraints.rst.txt  index.txt  parallel.rst.txt
extralibs/: InstallLibs.sh  d3lib.out  gcplib.out  lbfgs.out  make.in
extralibs/d3lib/: Makefile  dftd3.f  f3.f90  hbsimple.f
extralibs/gcplib/: Makefile  gcp.f90  stringmod.f90
extralibs/lbfgs/: Makefile  lbfgs.f
lib/: timestamp.f90
pgrad/: Makefile  mpigrad.f90
scripts_and_examples/: SETUP_mopac_example  mygrad.sh  orca30  orca40  orca_example.in  psi4.in  run-g09  run_pgrad
src/: CMakeLists.txt  Hmass.f90  TRproj.f90  anc.f90  ancopt.f90  ciopt.f90  conjgrad.f90  constrains.f90  control.f90  copt.f90  defaults.f90  eval_opt.f90  gdiis.f90  getHess.f90  getgrad.F90  hbonds.f90  hessup.f90  intcoords.f90  intopt.f90  io.f90  irc_opt.f90  lambda.f90  lbfgs_opt.F90  main.F90  math.f90  md.f90  modules.F90  molecule.f90  oniom.f90  print.F90  printmat.f90  progs.f90  random.f90  siman.f90  string.f90  tools.f90  version.dat.in
tools/: place.sh
